--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node src/server",
     "lint": "eslint . --ext .ts",
     "serve": "nodemon src/server",
-    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.js' --write",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,8 +26,12 @@
   "bugs": {
     "url": "https://github.com/danil2703/background-replacement/issues"
   },
+  "nodemonConfig": {
+    "ext": "js"
+  },
   "homepage": "https://github.com/danil2703/background-replacement#readme",
   "dependencies": {
+    "backrem": "^1.1.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "multer": "^1.4.3",
