--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server",
-    "lint": "eslint . --ext .ts",
+    "lint": "eslint . --ext .js",
     "serve": "nodemon src/server",
     "prettier-format": "prettier --config .prettierrc 'src/**/*.js' --write",
     "test": "echo \"Error: no test specified\" && exit 1"
